samples/_failures_safe/1761343826_3ad02f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e5e1480.c: In function ‘main’:
./samples/SAFE/__tmp_3e5e1480.c:161:5: error: expected declaration or statement at end of input
  161 |     input[strcspn(input, "\n")] = '\0';
      |     ^~~~~
